Hiding Send postcards on IE9 and mobile. Prevent click through.

--- a/app/assets/stylesheets/old/media/_ipad_portrait_min_768_2.css.sass
+++ b/app/assets/stylesheets/old/media/_ipad_portrait_min_768_2.css.sass
@@ -5,3 +5,6 @@
 #editMemoryForm
   #extraPanel
     min-height: 260px
+
+.hide-mobile
+  display: initial !important
